--- a/templates/pagina.html
+++ b/templates/pagina.html
@@ -12,16 +12,16 @@
             <h1>Form 1</h1>
             <form method="post" action="/modeloForm">
                 <div class="mb-3">
-                    <label for="pH" class="form-label">pH</label>
-                    <input type="text" class="form-control" id="pH" name="pH">                    
+                    <label for="RoomService" class="form-label">RoomService</label>
+                    <input type="text" class="form-control" id="RoomService" name="RoomService">                    
                 </div>
                 <div class="mb-3">
-                    <label for="sulphates" class="form-label">sulphates</label>
-                    <input type="text" class="form-control" id="sulphates" name="sulphates">
+                    <label for="Spa" class="form-label">Spa</label>
+                    <input type="text" class="form-control" id="Spa" name="Spa">
                 </div>
                 <div class="mb-3">
-                    <label for="alcohol" class="form-label">alcohol</label>
-                    <input type="text" class="form-control" id="alcohol" name="alcohol">
+                    <label for="Age" class="form-label">Age</label>
+                    <input type="text" class="form-control" id="Age" name="Age">
                 </div>
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
